# unifi-client-python

./: LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/unifi_client/: __init__.py  unifi.py
tests/: __init__.py  test_init.py  test_unifi.py
unifi/: __init__.py
